--- a/flaskr/templates/auth/register.html
+++ b/flaskr/templates/auth/register.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
 
+{% block title %}用户注册{% endblock %}
 {% block header %}
-<h1>{% block title %}<span class="glyphicon glyphicon-user"></span> 请注册{% endblock %}</h1>
+<h1><span class="glyphicon glyphicon-user"></span> 请注册</h1>
 {% endblock %}
 
 {% block content %}
