--- a/flaskr/templates/auth/login.html
+++ b/flaskr/templates/auth/login.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
 
+{% block title %}用户登录{% endblock %}
 {% block header %}
-  <h1>{% block title %}<span class="glyphicon glyphicon-log-in"></span> 请登录{% endblock %}</h1>
+  <h2><span class="glyphicon glyphicon-log-in"></span> 请登录</h2>
 {% endblock %}
 
 {% block content %}
